ex/vm3/tests/emit/snapshots/emit__fields.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 5, length: 12 (48 bytes))
.const
  0: "a"
  1: Int(0)
.code
  lnil  r1              ; let v
  lnil  r2              ; let o
  lf    r2, [0], r3     ; o.a
  lfi   r2, [1], r3     ; o.0
  lf    r2, [0], r1     ; v = o.a
  lfi   r2, [1], r1     ; v = o.0
  lf    r2, [0], r1     ; v = o.a + o.0
  lfi   r2, [1], r3
  add   r1, r3, r1
  lnil  r0
  fin   
  ret   r0

