ex/vm3/tests/emit/snapshots/emit__logical.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 4, length: 23 (92 bytes))
.code
  lnil  r1              ; let a
  lnil  r2              ; let b
  mov   r1, r3          ; a && b
  jf    r3, and#0
  mov   r2, r3
<and#0>:
  lnil  r1              ; let a
  lnil  r2              ; let b
  mov   r1, r3          ; let c = a && b
  jf    r3, and#1
  mov   r2, r3
<and#1>:
  lnil  r1              ; let a
  lnil  r2              ; let b
  mov   r1, r3          ; a || b
  jt    r3, or#2
  mov   r2, r3
<or#2>:
  lnil  r1              ; let a
  lnil  r2              ; let b
  mov   r1, r3          ; let c = a || b
  jt    r3, or#3
  mov   r2, r3
<or#3>:
  lnil  r0
  fin   
  ret   r0

