ex/vm3/tests/emit/snapshots/emit__number.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
function `__main__` (registers: 2, length: 7 (28 bytes))
.const
  0: Float(1.0)
  1: Int(32768)
.code
  lnil  r1              ; let v
  lc    [0], r1         ; v = 1.0
  lsmi  1, r1           ; v = 1
  lc    [1], r1         ; v = 32768
  lnil  r0
  fin   
  ret   r0

