ex/vm3/tests/emit/snapshots/emit__return_top_level_0.snap
---
source: ex/vm3/tests/./common/mod.rs
expression: snapshot
---
error in `return_top_level_0`: cannot use `return` outside of function
1 |  return
  |  ^^^^^^

